--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@rollup/plugin-typescript": "^6.1.0",
     "@tscc/rollup-plugin-tscc": "^0.6.0",
+    "@types/jquery": "^3.5.4",
     "closure-webpack-plugin": "^2.3.0",
     "google-closure-compiler": "^20201102.0.1",
     "node-sass": "^5.0.0",
@@ -23,9 +24,7 @@
     "rollup-plugin-terser": "^7.0.2",
     "tslib": "^2.0.3",
     "typescript": "^4.0.5",
-    "webpack": "^4.44.2"
-  },
-  "dependencies": {
+    "webpack": "^4.44.2",
     "terser": "^5.3.8"
   }
 }
