--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "author": "Wade McDaniel",
   "license": "ISC",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^16.0.0",
+    "@rollup/plugin-node-resolve": "^10.0.0",
     "@rollup/plugin-typescript": "^6.1.0",
     "@tscc/rollup-plugin-tscc": "^0.6.0",
     "@types/jquery": "^3.5.4",
@@ -22,9 +24,13 @@
     "node-sass": "^5.0.0",
     "rollup-plugin-sass": "^1.2.2",
     "rollup-plugin-terser": "^7.0.2",
+    "terser": "^5.3.8",
     "tslib": "^2.0.3",
     "typescript": "^4.0.5",
-    "webpack": "^4.44.2",
-    "terser": "^5.3.8"
+    "webpack": "^4.44.2"
+  },
+  "dependencies": {
+    "commonjs": "^0.0.1",
+    "node-resolve": "^1.3.4"
   }
 }
